--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,9 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-spinners": "^0.13.7"
+    "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.7",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
