--- a/back-end/shop/build.gradle
+++ b/back-end/shop/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 	implementation 'net.eusashead.hateoas:spring-halbuilder-page:1.0.0.RELEASE'
 	implementation 'org.hibernate:hibernate-annotations:3.5.6-Final'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox.ui:springfox-swagger-ui-rfc6570:1.0.0'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.hibernate:hibernate-core:5.4.32.Final'
